2006-10-23  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/config/routes.rb: Fix for show_category_noteslist entry.

	* donrails/test/integration/cache_test.rb (CacheTest::test_caching_notes): Fix test path.

2006-10-22  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/integration/browse_mt_test.rb (BrowseStoryTest::test_fromtop): Fix test path.

	* donrails/config/routes.rb: Change URL /archives/rdf_(.+) to /rdf/rdf_$1.
	* donrails/app/models/article_sweeper.rb (ArticleSweeper::ep_category): likewise.

2006-10-21  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/config/routes.rb: Change URL /notes/ to /archives/. 
	* donrails/app/models/article_sweeper.rb: likewise.
	
	* donrails/app/models/article_sweeper.rb 
	(ArticleSweeper::expire_for): Split following methods.
	(ArticleSweeper::ep_trigger_title_a): New method.
	(ArticleSweeper::ep_atom): New method.
	(ArticleSweeper::ep_category): New method.
	(ArticleSweeper::ep_articles_long): New method.
	(ArticleSweeper::ep_author): New method.
	(ArticleSweeper::ep_notes): New method.

	* donrails/app/models/article.rb (Article::renew_mtime): Fix: When article_date is not setted, this method set it.

	* donrails/app/views/login/manage_don_rbl.rhtml: Cleanup.

	* donrails/app/controllers/login_controller.rb (LoginController::manage_don_rbl): Cleanup.

	* donrails/app/views/shared/edit_don_rbl.rhtml (rbl_type): Change to use <select>.

	* donrails/app/controllers/notes_controller.rb (NotesController::add_comment2): Fix to show article which has not enrollment_id.

2006-10-20  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/layouts/MT/notes.rhtml: reflects author and
	author's email address from DB's.

	* donrails/app/views/layouts/default/notes.rhtml: likewise.

2006-10-19  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/ping.rb (Ping::send_ping_xmlrpc_extended): Fix rdf url.

	* donrails/app/views/login/manage_category.rhtml: Fix description.
