@@ -19,9 +19,9 @@ xml.feed("xmlns" => "http://purl.org/atom/ns\#") do
   end
   xml.link("type" => "application/atom+xml", "rel" => "service.post", "href" => @request.protocol + @request.host_with_port + url_for(:action => "post"), "title" => don_get_config.rdf_title)
 
-  xml.link("type" => "application/atom+xml", "rel" => "start", "href" => @request.protocol + @request.host_with_port + url_for(:action => "feed", :id => @articles.first.id.to_s), "title" => don_get_config.rdf_title)
-  xml.link("type" => "application/atom+xml", "rel" => "prev", "href" => @request.protocol + @request.host_with_port + url_for(:action => "feed", :id => @articles.first.id + 1), "title" => don_get_config.rdf_title)
-  xml.link("type" => "application/atom+xml", "rel" => "next", "href" => @request.protocol + @request.host_with_port + url_for(:action => "feed", :id => @articles.last.id - 1), "title" => don_get_config.rdf_title)
+  xml.link("type" => "application/atom+xml", "rel" => "start", "href" => @request.protocol + @request.host_with_port + url_for(:action => "feed", :aid => @articles.first.id.to_s), "title" => don_get_config.rdf_title)
+  xml.link("type" => "application/atom+xml", "rel" => "prev", "href" => @request.protocol + @request.host_with_port + url_for(:action => "feed", :aid => @articles.first.id + 1), "title" => don_get_config.rdf_title)
+  xml.link("type" => "application/atom+xml", "rel" => "next", "href" => @request.protocol + @request.host_with_port + url_for(:action => "feed", :aid => @articles.last.id - 1), "title" => don_get_config.rdf_title)
 
   xml.title don_get_config.rdf_title
   xml.generator "donrails", "url" => "http://developer.berlios.de/projects/donrails/"
@@ -35,7 +35,7 @@ xml.feed("xmlns" => "http://purl.org/atom/ns\#") do
       xml.title article.title_to_html
       xml.link("type" => "text/html",
                "rel" => "alternate", 
-               "href" => @request.protocol + @request.host_with_port + url_for(:action => "feed", :id => article.id))
+               "href" => @request.protocol + @request.host_with_port + url_for(:action => "feed", :aid => article.id))
       xml.link("type" => "application/atom+xml",
                "rel" => "service.edit",
                "href" => @request.protocol + @request.host_with_port + url_for(:action => "edit", :id => article.id),
